<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="name">Name</string>
    <!-- label for whipped cream option [CHAR LIMIT=20] -->
    <string name="whipped_cream">Whipped Cream</string>
    <!-- label for chocolate option [CHAR LIMIT=20] -->
    <string name="chocolate">Chocolate</string>
    <!-- quantity heading [CHAR LIMIT=20] -->
    <string name="quantity">Quantity</string>
    <!-- starting quantity, at least 1 [CHAR LIMIT=20] -->
    <string name="initial_quantity">1</string>
    <!-- Order button text [CHAR LIMIT=20] -->
    <string name="order">Order</string>
    <!--strings in java file for order summary-->
    <!--
      Subject line for the order summary email. It will be in the format of
      "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_email_subject">JustJava order for</string>
    <!--
    Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
    user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%1$s</xliff:g></string>
    <!--
      Whipped cream topping for the order summary. It will be shown in the format of
      "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g example="true" id="whippedcream">%s</xliff:g></string>
    <!--
      Chocolate topping for the order summary. It will be shown in the format of
      "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_chocolate">Add Chocolate? <xliff:g example="true" id="chocolate">%s</xliff:g></string>
    <!--
      Quantity of coffee cups for the order summary. It will be shown in the format of
      "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%s</xliff:g></string>
    <!--
      Total price for the order summary. It will be shown in the format of
      "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_total">Total: <xliff:g example="$10" id="total">%s</xliff:g></string>
    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="thank_you">Thank you!</string>
</resources>